--- a/MODAMSWeb/Areas/Users/Views/Home/Newsfeed.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Home/Newsfeed.cshtml
@@ -78,7 +78,7 @@
                                                 </div>
                                             </td>
                                             <td>
-                                                @await _func.GetDepartmentName(feed.EmployeeId)
+                                                @await _func.GetDepartmentNameAsync(feed.EmployeeId)
                                             </td>
                                             <td>
                                                 <span class="text-end" id="spnTimeStamp">
