Service for HomeController Implemented

--- a/MODAMSWeb/Areas/Users/Views/Home/AllNotifications.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Home/AllNotifications.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<MODAMS.Models.ViewModels.Dto.dtoNotification>
+﻿@model List<MODAMS.Models.ViewModels.Dto.NotificationDTO>
 <style>
     /* CSS styles can also be placed in an external stylesheet */
     .colored-row {
