--- a/MODAMSWeb/Areas/Users/Views/Home/Profile.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Home/Profile.cshtml
@@ -1,4 +1,4 @@
-﻿@model MODAMS.Models.ViewModels.Dto.dtoProfileData
+﻿@model MODAMS.Models.ViewModels.Dto.ProfileDataDTO
 
 <!-- PAGE-HEADER -->
 <div class="page-header">
