--- a/MODAMSWeb/Areas/Users/Views/Alerts/Index.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Alerts/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model MODAMS.Models.ViewModels.Dto.dtoAlerts
+﻿@model MODAMS.Models.ViewModels.Dto.AlertsDTO
 
 <div class="page-header">
     <div>
