--- a/MODAMSWeb/Views/Shared/_Notification.cshtml
+++ b/MODAMSWeb/Views/Shared/_Notification.cshtml
@@ -1,38 +1,70 @@
-﻿@if (TempData["success"] != null)
-    {
-        <script>
-        @*notif({
-            msg: "@TempData["success"]",
-            type: "success",
-            position: "right",
-            time: 1000
-        });*@
-        notif({
-            type: "primary",
-            msg: "<b>Success: </b>@TempData["success"]",
-            position: "center",
-            width: 500,
-            height: 60,
-            autohide: true
-        });
-        </script>
+﻿<style>
+    .notification-container {
+        position: fixed;
+        top: 20px;
+        right: 20px;
+        z-index: 1050;
+        width: 500px; /* Adjust the width as needed */
     }
-    @if (TempData["error"] != null)
-    {
-        <script>
-        notif({
-            type: "error",
-            msg: "<b>Error: </b>@TempData["error"]",
-            position: "center",
-            width: 500,
-            height: 60,
-            autohide: true
-        });
-        @*notif({
-            msg: "@TempData["error"]",
-            type: "error",
-            position: "right",
-            time: 1000
-        });*@
-        </script>
+
+    .notification-message {
+        margin-bottom: 10px;
+        border-radius: 5px;
+        box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
     }
+
+    .alert-danger {
+        background-color: #f8d7da;
+        color: #721c24;
+        border: 1px solid #f5c6cb;
+    }
+
+    .alert-success {
+        background-color: #d4edda;
+        color: #155724;
+        border: 1px solid #c3e6cb;
+    }
+
+    .notification-message .bi {
+        font-size: 1.2em;
+    }
+
+</style>
+
+@{
+    var errorMessage = TempData["error"] as string;
+    var successMessage = TempData["success"] as string;
+}
+
+@if (!string.IsNullOrEmpty(errorMessage))
+{
+    <div class="notification-container">
+        <div class="alert alert-danger alert-dismissible fade show p-0 mb-0" role="alert">
+            <p class="py-3 px-5 mb-0 border-bottom border-bottom-danger-light">
+                <span class="alert-inner--icon me-2"><i class="fe fe-slash"></i></span>
+                <strong>Error Message</strong>
+            </p>
+            <p class="py-3 px-5">@errorMessage</p>
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">×</span>
+            </button>
+        </div>
+    </div>
+}
+
+@if (!string.IsNullOrEmpty(successMessage))
+{
+    <div class="notification-container">
+        <div class="alert alert-success alert-dismissible fade show p-0 mb-4 notification-message" role="alert">
+            <p class="py-3 px-5 mb-0 border-bottom border-bottom-success-light">
+                <span class="alert-inner--icon me-2"><i class="fe fe-thumbs-up"></i></span>
+                <strong>Success Message</strong>
+            </p>
+            <p class="py-3 px-5">@successMessage</p>
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">×</span>
+            </button>
+        </div>
+    </div>
+}
+
