--- a/MODAMSWeb/Areas/Users/Views/Assets/AssetDocuments.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Assets/AssetDocuments.cshtml
@@ -1,4 +1,4 @@
-﻿@model MODAMS.Models.ViewModels.Dto.dtoAssetDocument
+﻿@model MODAMS.Models.ViewModels.Dto.AssetDocumentDTO
 <style>
     cardHeight {
         min-height: 600px;
@@ -12,8 +12,8 @@
         <ol class="breadcrumb">
             <li class="breadcrumb-item"><a asp-area="Users" asp-controller="Home" asp-action="Index">Dashboard</a></li>
             <li class="breadcrumb-item"><a asp-area="Users" asp-controller="Stores" asp-action="Index">Stores</a></li>
-            <li class="breadcrumb-item"><a asp-area="Users" asp-controller="Stores" asp-action="StoreDetails" asp-route-id="@TempData["storeId"]">@TempData["storeName"]</a></li>
-            <li class="breadcrumb-item"><a asp-area="Users" asp-controller="Assets" asp-action="Index" asp-route-id="@TempData["storeId"]">Assets</a></li>
+            <li class="breadcrumb-item"><a asp-area="Users" asp-controller="Stores" asp-action="StoreDetails" asp-route-id="@Model.StoreId">@Model.StoreName</a></li>
+            <li class="breadcrumb-item"><a asp-area="Users" asp-controller="Assets" asp-action="Index" asp-route-id="@Model.StoreId">Assets</a></li>
             <li class="breadcrumb-item active" aria-current="page">Asset Documents</li>
         </ol>
     </div>
@@ -23,7 +23,7 @@
     <div class="col-md-12">
         <div class="card">
             <div class="card-header border-bottom bg-info-gradient divShadow d-flex justify-content-between align-items-center">
-                <h4 class="m-0 text-muted text-white">@TempData["assetInfo"]</h4>
+                <h4 class="m-0 text-muted text-white">@Model.AssetInfo</h4>
                 <div class="btn-group">
                     <a asp-action="EditAsset" asp-controller="Assets" asp-route-id="@Model.AssetId" class="btn btn-outline-info" data-bs-toggle="tooltip" data-bs-original-title="Edit Asset">
                         <i class="fa fa-edit"></i>
@@ -55,52 +55,52 @@
                                             @{
                                                 int nCounter = 0;
                                                 string sCounter = "";
-                                                foreach (var dt in Model.vwAssetDocuments)
+                                                foreach (var dt in Model.DocumentList)
                                                 {
                                                     nCounter++;
                                                     sCounter = nCounter < 10 ? '0' + nCounter.ToString() : nCounter.ToString();
-                                                    <tr>
-                                                        <td class="text-muted text-center fs-15 fw-semibold">@sCounter.</td>
-                                                        <td class="text-muted fs-15 fw-semibold">@dt.Name</td>
-                                                        <td class="text-muted fs-15 fw-semibold">
-                                                            @{
+                                                                <tr>
+                                                                    <td class="text-muted text-center fs-15 fw-semibold">@sCounter.</td>
+                                                                    <td class="text-muted fs-15 fw-semibold">@dt.Name</td>
+                                                                    <td class="text-muted fs-15 fw-semibold">
+                                                                        @{
                                                                 if (dt.Id>0)
                                                                 {
-                                                                    <a href="@dt.DocumentUrl" class="btn btn-link">Download</a>
+                                                                                            <a href="@dt.DocumentUrl" class="btn btn-link">Download</a>
                                                                 }
-                                                            }
-                                                        </td>
-                                                        <td class="text-muted fs-15 fw-semibold">
-                                                            <div class="d-flex align-items-stretch">
-                                                                <a href="#" onclick="showCardUpload(@dt.DocumentTypeId)" class="btn btn-sm btn-outline-info border me-2">
-                                                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="20" fill="currentColor" class="bi bi-upload" viewBox="0 0 16 16">
-                                                                        <path d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5z" />
-                                                                        <path d="M7.646 1.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1-.708.708L8.5 2.707V11.5a.5.5 0 0 1-1 0V2.707L5.354 4.854a.5.5 0 1 1-.708-.708l3-3z" />
-                                                                    </svg>
-                                                                </a>
-                                                                @{
+                                                                        }
+                                                                    </td>
+                                                                    <td class="text-muted fs-15 fw-semibold">
+                                                                        <div class="d-flex align-items-stretch">
+                                                                            <a href="#" onclick="showCardUpload(@dt.DocumentTypeId)" class="btn btn-sm btn-outline-info border me-2">
+                                                                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="20" fill="currentColor" class="bi bi-upload" viewBox="0 0 16 16">
+                                                                                    <path d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5z" />
+                                                                                    <path d="M7.646 1.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1-.708.708L8.5 2.707V11.5a.5.5 0 0 1-1 0V2.707L5.354 4.854a.5.5 0 1 1-.708-.708l3-3z" />
+                                                                                </svg>
+                                                                            </a>
+                                                                            @{
                                                                     if (dt.Id > 0)
                                                                     {
-                                                                        <a href="#" class="btn btn-sm btn-outline-secondary border me-2"
-                                                                           data-bs-toggle="dropdown" aria-expanded="false">
-                                                                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="20" fill="currentColor" class="bi bi-trash" viewBox="0 0 16 16">
-                                                                                <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z" />
-                                                                                <path fill-rule="evenodd" d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z" />
-                                                                            </svg>
-                                                                        </a>
-                                                                        <div class="dropdown-menu" style="">
-                                                                            <div class="p-5">
-                                                                                <h4 class="dropdown-title text-secondary">Delete Document</h4><br />
-                                                                                <p>You will not be able to recover this document again<br /><br />Are you sure?</p>
-                                                                                <a asp-area="Users" asp-controller="Assets" asp-action="DeleteDocument" asp-route-id="@dt.Id" class="btn btn-secondary btn-sm"><i class="mdi mdi-checkbox-marked-circle-outline"></i> Delete Document</a>
-                                                                            </div>
-                                                                        </div>
+                                                                                                <a href="#" class="btn btn-sm btn-outline-secondary border me-2"
+                                                                                                   data-bs-toggle="dropdown" aria-expanded="false">
+                                                                                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="20" fill="currentColor" class="bi bi-trash" viewBox="0 0 16 16">
+                                                                                                        <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z" />
+                                                                                                        <path fill-rule="evenodd" d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z" />
+                                                                                                    </svg>
+                                                                                                </a>
+                                                                                                <div class="dropdown-menu" style="">
+                                                                                                    <div class="p-5">
+                                                                                                        <h4 class="dropdown-title text-secondary">Delete Document</h4><br />
+                                                                                                        <p>You will not be able to recover this document again<br /><br />Are you sure?</p>
+                                                                                                        <a asp-area="Users" asp-controller="Assets" asp-action="DeleteDocument" asp-route-id="@dt.Id" class="btn btn-secondary btn-sm"><i class="mdi mdi-checkbox-marked-circle-outline"></i> Delete Document</a>
+                                                                                                    </div>
+                                                                                                </div>
                                                                     }
-                                                                }
-                                                                
-                                                            </div>
-                                                        </td>
-                                                    </tr>
+                                                                            }
+                                                                            
+                                                                        </div>
+                                                                    </td>
+                                                                </tr>
                                                 }
                                             }
                                         </tbody>
@@ -145,7 +145,7 @@
                 <div class="row">
                     @*<hr class="customHR" />*@
                     <div class="col-sm-12">
-                        <a asp-action="Index" asp-controller="Assets" asp-route-id="@TempData["storeId"]" id="btnCancel" class="btn btn-outline-default"><i class="fe fe-corner-up-left"></i>&nbsp;Previous</a>
+                        <a asp-action="Index" asp-controller="Assets" asp-route-id="@Model.StoreId" id="btnCancel" class="btn btn-outline-default"><i class="fe fe-corner-up-left"></i>&nbsp;Previous</a>
                     </div>
 
                 </div>
@@ -185,8 +185,15 @@
                 beforeSend: function () {
 
                 },
-                success: function (e) {
-                    $("#dvDocumentTypesData").html("").html(e);
+                success: function (response) {
+                    if (response.success) {
+                        $("#dvDocumentTypesData").html(response.data);
+                    } else {
+                        showErrorMessageJs(response.message);
+                    }
+                },
+                error: function (xhr, status, error) {
+                    showErrorMessageJs(`Error loading document types: ${error}`);
                 },
                 complete: function () {
 
@@ -206,15 +213,18 @@
 
         const getDocumentName = (id) => {
             var sData = $("#dvDocumentTypesData").html();
-
-            if (sData != "No Records Found") {
-                var Data = JSON.parse(sData);
-                Data.forEach((e) => {
+            
+            var result = tryParseJson(sData, "Document Types");
+            if (result.status === "success") {
+                var data = result.data;
+                data.forEach((e) => {
                     if (e.Id == id) {
                         $("#DocumentTypeId").val("").val(e.Id);
                         $("#lblDocumentName").html("").html(e.Name);
                     }
                 });
+            } else {
+                showErrorMessageJs(result.message);
             }
         }
 
