--- a/MODAMSWeb/Areas/Users/Views/Assets/EditAsset.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Assets/EditAsset.cshtml
@@ -1,4 +1,4 @@
-﻿@model MODAMS.Models.ViewModels.Dto.dtoAsset
+﻿@model MODAMS.Models.ViewModels.Dto.AssetEditDTO
 
 
 <style>
@@ -16,8 +16,8 @@
         <ol class="breadcrumb">
             <li class="breadcrumb-item"><a asp-area="Users" asp-controller="Home" asp-action="Index">Dashboard</a></li>
             <li class="breadcrumb-item"><a asp-area="Users" asp-controller="Stores" asp-action="Index">Stores</a></li>
-            <li class="breadcrumb-item"><a asp-area="Users" asp-controller="Stores" asp-action="StoreDetails" asp-route-id="@TempData["storeId"]">@TempData["storeName"]</a></li>
-            <li class="breadcrumb-item"><a asp-area="Users" asp-controller="Assets" asp-action="Index" asp-route-id="@TempData["storeId"]">Assets</a></li>
+            <li class="breadcrumb-item"><a asp-area="Users" asp-controller="Stores" asp-action="StoreDetails" asp-route-id="@Model.StoreId">@Model.StoreName</a></li>
+            <li class="breadcrumb-item"><a asp-area="Users" asp-controller="Assets" asp-action="Index" asp-route-id="@Model.StoreId">Assets</a></li>
             <li class="breadcrumb-item active" aria-current="page">Edit Asset</li>
         </ol>
     </div>
@@ -237,7 +237,7 @@
                 <div class="row p-5">
                     <div class="btn-list">
                         <button id="btnSubmit" class="btn btn-info">Save Changes</button>
-                        <a asp-action="Index" asp-controller="Assets" asp-route-id="@TempData["storeId"]"
+                        <a asp-action="Index" asp-controller="Assets" asp-route-id="@Model.StoreId"
                            id="btnCancel" class="btn btn-outline-default"><i class="fe fe-corner-up-left"></i>&nbsp;Previous</a>
                     </div>
                 </div>
@@ -289,6 +289,25 @@
             }
         }
 
+        
+        const getCategoryId = () => {
+            var id = $("#SubCategoryId").val();
+            var sData = $("#dvSubCategoryData").html();
+            var nCategId = 0;
+
+            var result = tryParseJson(sData, "Sub Category Data")
+
+            if (result.status === "success") {
+                var data = result.data;
+                data.forEach((e) => {
+                    if (e.Id == id) {
+                        nCategId = e.CategoryId;
+                    }
+                });
+            }
+            
+            return nCategId;
+        }
         const loadCategories = () => {
             var postData = {};
             $.ajax({
@@ -298,8 +317,15 @@
                 beforeSend: function () {
 
                 },
-                success: function (e) {
-                    $("#dvCategoryData").html("").html(e);
+                success: function (response) {
+                    if (response.success) {
+                        $("#dvCategoryData").html(response.data);
+                    } else {
+                        showErrorMessageJs(response.message);
+                    }
+                },
+                error: function (xhr, status, error) {
+                    showErrorMessageJs(`Error loading categories data: ${error}`);
                 },
                 complete: function () {
                     loadSubCategories();
@@ -317,63 +343,51 @@
                 data: postData,
                 beforeSend: function () {
                 },
-                success: function (e) {
-                    $("#dvSubCategoryData").html("").html(e);
+                success: function (response) {
+                    if (response.success) {
+                        $("#dvSubCategoryData").html(response.data);
+                    } else {
+                        showErrorMessageJs(response.message);
+                    }
                 },
                 complete: function () {
-                    populateCmbCategory();
+                    populateCmbSubCategory();
                 }
             });
         }
         const populateCmbCategory = () => {
             var sData = $("#dvCategoryData").html();
+            var result = tryParseJson(sData, "Categories");
 
-            if (sData != "No Records Found") {
-                var Data = JSON.parse(sData);
+            if (result.status === "success") {
+                const data = result.data;
+
                 var sHtml = '<option selected disabled>-Select Category-</option>';
-                var categoryId = getCategoryId();
-
-                Data.forEach((e) => {
-                    if (categoryId == e.Id) {
-                        sHtml += '<option selected value="' + e.Id + '">' + e.CategoryName + '</option>';
-                    } else {
-                        sHtml += '<option value="' + e.Id + '">' + e.CategoryName + '</option>';
-                    }
-
+                data.forEach((e) => {
+                    sHtml += '<option value="' + e.Id + '">' + e.CategoryName + '</option>';
                 })
 
                 $("#CategoryId").html("").html(sHtml);
-                checkIfVehiclesSelected();
+            } else {
+                showErrorMessageJs(result.message);
             }
-        }
-        const getCategoryId = () => {
-            var id = $("#SubCategoryId").val();
-            var sData = $("#dvSubCategoryData").html();
-            var nCategId = 0;
-
-            if (sData != "No Records Found") {
-                var Data = JSON.parse(sData);
-                Data.forEach((e) => {
-                    if (e.Id == id) {
-                        nCategId = e.CategoryId;
-                    }
-                });
-            }
-            return nCategId;
         }
         const populateCmbSubCategory = () => {
             var id = $("#CategoryId").val();
-
             var sData = $("#dvSubCategoryData").html();
-            if (sData != "No Records Found") {
-                var Data = JSON.parse(sData);
-                var sHtml = '<option disabled value="0">-Select Sub-Category-</option>';
 
-                Data.forEach((e) => {
+            var result = tryParseJson(sData, "Sub Categories");
+            var sHtml = '<option disabled value="0">-Select Sub-Category-</option>';
+
+            if (result.status === "success") {
+                const data = result.data;
+                data.forEach((e) => {
                     if (e.CategoryId == id)
                         sHtml += '<option value="' + e.Id + '">' + e.SubCategoryName + '</option>';
                 });
                 $("#SubCategoryId").html("").html(sHtml);
+            } else {
+                showErrorMessageJs(result.message);
             }
         }
 
