--- a/MODAMSWeb/Views/Shared/layouts/_app-sidebar.cshtml
+++ b/MODAMSWeb/Views/Shared/layouts/_app-sidebar.cshtml
@@ -51,7 +51,7 @@
                         string departmentName = await _func.GetDepartmentNameAsync(employeeId);
 
                         <div class="pb-3 text-info">Store Owner</div>
-                        <div>@departmentName)</div>
+                        <div>@departmentName</div>
                     }
                     else if (User.IsInRole("Administrator"))
                     {
