--- a/MODAMSWeb/Areas/Users/Views/Disposals/CreateDisposal.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Disposals/CreateDisposal.cshtml
@@ -1,4 +1,4 @@
-﻿@model MODAMS.Models.ViewModels.Dto.dtoCreateDisposal
+﻿@model MODAMS.Models.ViewModels.Dto.DisposalCreateDTO
 
 <style>
     input[type="date"]::-webkit-calendar-picker-indicator {
