--- a/MODAMSWeb/Areas/Users/Views/Disposals/EditDisposal.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Disposals/EditDisposal.cshtml
@@ -1,4 +1,4 @@
-﻿@model MODAMS.Models.ViewModels.Dto.dtoEditDisposal
+﻿@model MODAMS.Models.ViewModels.Dto.DisposalEditDTO
 
 <style>
     input[type="date"]::-webkit-calendar-picker-indicator {
