--- a/MODAMSWeb/Areas/Users/Views/Disposals/Index.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Disposals/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model MODAMS.Models.ViewModels.Dto.dtoDisposal
+﻿@model MODAMS.Models.ViewModels.Dto.DisposalsDTO
 
 <div class="page-header">
     <div>
